basic message handling

--- a/app.json
+++ b/app.json
@@ -60,7 +60,7 @@
           "modes": [
             "peripheral, central"
           ],
-          "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
+          "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices",
         }
       ]
     ],
