--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "buffer": "^6.0.3",
     "expo": "~54.0.22",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
@@ -26,13 +28,15 @@
     "expo-linking": "~8.0.8",
     "expo-modules-core": "^3.0.25",
     "expo-router": "~6.0.14",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
-    "pako": "^2.1.0",
     "munim-bluetooth-peripheral": "^0.4.3",
+    "pako": "^2.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
