--- a/package.json
+++ b/package.json
@@ -60,8 +60,11 @@
     "drizzle-kit": "^0.31.7",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "~29.7.0",
     "jest-expo": "~54.0.13",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
   "private": true,
