--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.14.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "sqlite": "^5.1.1",
+    "sqlite-async": "^1.2.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/jest": "29.5.14",
