--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "buffer": "^6.0.3",
     "drizzle-orm": "^0.44.7",
+    "expo": "~54.0.25",
     "expo-asset": "~12.0.10",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
@@ -36,13 +37,11 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
-    "munim-bluetooth-peripheral": "^0.4.3",
     "pako": "^2.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-base64": "^0.2.2",
-    "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-peripheral": "^0.0.3",
     "react-native-reanimated": "~4.1.1",
@@ -53,8 +52,7 @@
     "react-native-worklets": "0.5.1",
     "sqlite": "^5.1.1",
     "sqlite-async": "^1.2.2",
-    "sqlite3": "^5.1.7",
-    "expo": "~54.0.25"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/jest": "29.5.14",
