--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-navigation/native": "^7.1.8",
     "buffer": "^6.0.3",
     "drizzle-orm": "^0.44.7",
-    "expo": "~54.0.22",
+    "expo": "~54.0.25",
+    "expo-asset": "~12.0.10",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.16",
@@ -27,7 +28,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
-    "expo-modules-core": "^3.0.25",
+    "expo-module-scripts": "^5.0.7",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -36,13 +37,11 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
-    "munim-bluetooth-peripheral": "^0.4.3",
     "pako": "^2.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-base64": "^0.2.2",
-    "react-native-ble-plx": "^3.5.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-peripheral": "^0.0.3",
     "react-native-reanimated": "~4.1.1",
@@ -65,6 +64,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "expo": "^54.0.25",
     "jest": "~29.7.0",
     "jest-expo": "~54.0.13",
     "prettier": "^3.6.2",
