--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^17.0.0",
     "@expo/vector-icons": "^15.0.3",
     "@hpke/chacha20poly1305": "^1.7.1",
     "@hpke/hybridkem-x-wing": "^0.6.1",
+    "@libp2p/crypto": "^5.1.13",
+    "@noble/curves": "^2.0.1",
+    "@noble/hashes": "^2.0.1",
     "@noble/post-quantum": "^0.5.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@stablelib/chacha20poly1305": "^2.0.1",
     "buffer": "^6.0.3",
     "drizzle-orm": "^0.44.7",
     "expo": "~54.0.25",
@@ -40,16 +45,18 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "hybrid-crypto-js": "^0.2.4",
     "pako": "^2.1.0",
-    "react": "^19.2.0",
+    "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "^0.82.1",
+    "react-native": "0.81.5",
     "react-native-base64": "^0.2.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "sqlite": "^5.1.1",
@@ -58,7 +65,6 @@
     "ts-mls": "^1.4.2"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "29.5.14",
     "@types/pako": "^2.0.4",
     "@types/react": "~19.1.0",
@@ -78,7 +84,7 @@
   "jest": {
     "preset": "jest-expo",
     "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|ts-mls|@noble)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg|ts-mls|@noble|@stablelib/.*)"
     ]
   }
 }
