--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "test": "jest --watchAll"
+    "test": "jest --logHeapUsage"
   },
   "dependencies": {
     "@chainsafe/libp2p-noise": "^17.0.0",
