--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -51,7 +52,10 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-base64": "^0.2.2",
+    "react-native-fast-rsa": "^2.6.3",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-qrcode-svg": "^6.3.21",
     "react-native-reanimated": "~4.1.1",
     "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "~5.6.0",
