--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
 	      "NSMicrophoneUsageDescription": "bitchat uses the microphone to record voice notes that relay across the mesh.",
 	      "NSLocationWhenInUseUsageDescription": "bitchat uses your approximate location to compute local geohash channels for optional public chats. Exact GPS is never shared.",
 	      "UILaunchStoryboardName": "LaunchScreen",
-	      "UIRequiresFullScreen": true,
+	      "UIRequiresFullScreen": true
       }
     },
     "android": {
